# desidescsn

./: README.md  setup.cfg  setup.py
desidescsn/: __init__.py  catalogs.py  efficiency.py  footprint.py  surveys.py
