[metadata]
name = desidescsn
description = Field Level Inference Package
url = https://github.com/corentinravoux/desidescsn
email = corentin.ravoux.research@gmail.com
author = Corentin Ravoux
long_description = file : README.md
license = MIT


[options]
packages = find:
install_requires =
    pandas
    numpy
    scipy
    matplotlib
    astropy

[options.extras_require]
docs =
    markdown
    sphinx >= 5.2.3
    sphinx-markdown-tables >= 0.0.15
    numpydoc
    furo
    myst-parser
    sphinx-copybutton
    sphinx-design
    sphinx-inline-tabs
    sphinx-tabs
    sphinx-autoapi
